<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC-XJlwycf-W3RvxifB2lsQu3_Z0HT6AW0</string>
    <string name="login_base_url" translatable="false">https://login.reciapp.quartrino.com/</string>
    <string name="routes_available_base_url" translatable="false">https://get-available-routes.reciapp.quartrino.com/</string>
    <string name="my_routes_base_url" translatable="false">https://get-assigned-routes.reciapp.quartrino.com/</string>
    <string name="assing_route_base_url" translatable="false">https://assign-picking-route.reciapp.quartrino.com/</string>
    <string name="start_route_base_url" translatable="false">https://start-picking-route.reciapp.quartrino.com/</string>
    <string name="finish_point_route_base_url" translatable="false">https://finish-picking-point.reciapp.quartrino.com/</string>

    <string name="app_name">ReciApp Gatherer</string>

    <string name="btn_login">Ingresar</string>
    <string name="btn_view_route">Ver Ruta</string>
    <string name="btn_view_my_route">Mi Ruta</string>
    <string name="btn_retry">Reintentar</string>
    <string name="btn_i_collect">Yo Recojo</string>
    <string name="btn_start_route">Comenzar Ruta</string>
    <string name="btn_pick_up_point">Recoger en punto</string>
    <string name="btn_finish_route">Terminé Ruta</string>

    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>

    <string name="title_welcome">Bienvenido!</string>
    <string name="title_enter_app">Ingrese a ReciApp Recolector</string>
    <string name="title_available_routes">Rutas Disponibles</string>
    <string name="title_my_routes">Mis Rutas</string>
    <string name="title_info">Información</string>
    <string name="title_hello">Hola!</string>
    <string name="title_loading">Procesando solicitud…</string>
    <string name="title_welcome_team">Bienvenido al Equipo!</string>

    <string name="description_app">En Reciapp Recolector trabajamos para hacer más sencillo, práctico y formal tu trabajo de recolección.</string>
    <string name="description_advantage">¿Qué ventajas tienes al usar Reciapp Recolector?</string>
    <string name="description_advantage_first">Ayudas a disminuir el impacto ambiental de manera práctica y segura.</string>
    <string name="description_advantage_second">Apoyas la formalización del trabajo de recolección</string>
    <string name="description_advantage_third">Puedes organizar tus rutas de trabajo de manera fácil y rápida</string>
    <string name="description_advantage_fourth">Tu trabajo de recolección será mucho más sencillo</string>
    <string name="description_no_available_routes">No hay Rutas Diponilbes</string>
    <string name="description_no_my_routes">No tienes Rutas Actualmente</string>

    <string name="general_first">1</string>
    <string name="general_second">2</string>
    <string name="general_third">3</string>
    <string name="general_fourth">4</string>

    <string name="warning_permission_denied">La ubicación te ayudara.</string>

    <string name="error_server">A ocurrido un error, reintentalo de nuevo.</string>
</resources>