<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnlHeader"
        android:layout_width="@dimen/size0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_toolbar_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size0dp"
            android:layout_marginVertical="@dimen/size12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_icon_app"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnlBody"
        android:layout_width="@dimen/size0dp"
        android:layout_height="@dimen/size0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cnlHeader"
        app:layout_constraintVertical_bias="0">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size16dp"
            android:layout_marginTop="@dimen/size24dp"
            android:text="@string/title_welcome"
            android:textColor="@color/green005005"
            android:textSize="@dimen/size24sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size16dp"
            android:text="@string/title_enter_app"
            android:textColor="@color/green005005"
            android:textSize="@dimen/size16sp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txvTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size16dp"
            android:layout_marginHorizontal="@dimen/size16dp"
            android:hint="@string/hint_user"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txvSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:textSize="@dimen/size14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size16dp"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tilUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tieUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:lines="1"
                android:textSize="@dimen/size14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/ButtonPrimary"
            android:layout_width="@dimen/size0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size28dp"
            android:text="@string/btn_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/size24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/size24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/img_recycling_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>
